--- a/src/main/webapp/WEB-INF/views/product/list.html
+++ b/src/main/webapp/WEB-INF/views/product/list.html
@@ -10,6 +10,7 @@
 <div>
     <div th:each="product,iterStat : ${products}" th:class="${iterStat.odd}? 'odd'">
         <div class="product-item">
+            <img width="150px" height="150px" th:src="@{'/i/' + ${product.image}}">
             <p th:text="${product.name}"></p>
             <p th:text="${product.price}"></p>
             <p><a th:href="@{/edit-product/__${product.id}__}">Edit</a></p>
