--- a/src/main/webapp/WEB-INF/views/product/list.html
+++ b/src/main/webapp/WEB-INF/views/product/list.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1 class="title">Products List</h1>
+<h2 th:text="${cookieValue.value}"></h2>
 <div>
     <div th:each="product,iterStat : ${products}" th:class="${iterStat.odd}? 'odd'">
         <div class="product-item">
